syntax = "proto3";

package order;

service OrderService {
  rpc FromCart (FromCartRequest) returns (FromCartResponse);
  rpc BuyNow (BuyNowRequest) returns (BuyNowResponse);
  rpc Confirm (ConfirmRequest) returns (ConfirmResponse);
}

message FromCartRequest {
  string userId = 1;
  repeated ProductItem items = 2;
}

message BuyNowRequest {
  string userId = 1;
  ProductItem item = 2;
}

message ProductItem {
  string productId = 1;
  string skuNo = 2;
  int32 quantity = 3;
}

message FromCartResponse {
  bool success = 1;
  string message = 2;
  string orderId = 3;
}

message BuyNowResponse {
  bool success = 1;
  string message = 2;
  string orderId = 3;
}

message ConfirmRequest {
  string orderId = 1;
  string userId = 2;
}

message ConfirmResponse {
  bool success = 1;
  string message = 2;
}